Refactor: Improve orders' routes
